--- a/shared.css
+++ b/shared.css
@@ -1,12 +1,14 @@
 body{
     font-family:"Quicksand",sans-serif;
     margin: 0;
+    
 }
 #page-logo a{
     padding:10px;
     font-family: 'Monoton', cursive;
     color:rgb(189, 25, 175);
     font-size: 50px;
+    margin-left: 25px;
     text-decoration: none;
     /*
     text-transform upper ve lower caseyi ve kombinasyonları için bir property
@@ -16,25 +18,31 @@ body{
 
 }
 #header {
+    
     display: flex;
     flex-direction:row;
     
     align-items: center ;
     /*
     flex özelliğine sahip kapsayıcıların yatay eksende nasıl hizalacağını ayarlar
+
+    
     */
+    position: fixed;
+    width: 100%;
     justify-content: space-between;
+
+    
 }
 
 ul{
     list-style: none;
     margin:0px;
-    padding:0px;    
+    padding-right:25px;    
     display: flex;
     
 }
 nav a{
     padding-right: 20px;
     text-decoration: none;
-
 }
