--- a/index.css
+++ b/index.css
@@ -118,3 +118,23 @@ nav ul {
 .photo strong{
   color:rgb(189, 25, 175);
 }
+
+footer{
+  background:linear-gradient(70deg,rgb(24,24,24),rgb(25,29,29))
+}
+
+footer li{
+  width:80px;
+  height: 80px;
+  margin:40px;
+}
+footer img{
+  width: 100%;
+  height: 100%;
+}
+footer ul{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+
+}
